etc/envoy.json
{

  "listeners": [
    {
      "address": "tcp://0.0.0.0:9000",
      "bind_to_port": true,
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/justhello",
                      "cluster": "justhello",
                      "opaque_config": {
                        "mixer_control": "off",
                        "mixer_forward": "off"
                      }
                    },
                    {
                      "timeout_ms": 0,
                      "prefix": "/hello",
                      "cluster": "hello",
                      "opaque_config": {
                        "mixer_control": "on",
                        "mixer_forward": "off"
                      }
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "mixer",
                "config": {
                  "mixer_server": "localhost:9091",
                  "mixer_attributes": {
                    "target.ip": "10.68.4.17",
                    "target.service": "hello.lt.svc.cluster.local",
                    "target.uid": "kubernetes://hello-2483647290-rjfvv.lt"
                  },
                  "forward_attributes": {
                    "source.ip": "10.68.4.17",
                    "source.uid": "kubernetes://hello-2483647290-rjfvv.lt"
                  },
                  "quota_name": "RequestCount"
                }
              },

              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/stdout",
    "address": "tcp://0.0.0.0:9001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "justhello",
        "connect_timeout_ms": 5000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://localhost:8005"
          }
        ]
      },
      {
        "name": "hello",
        "connect_timeout_ms": 5000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://localhost:8005"
          }
        ]
      }
    ]
  },
  "statsd_local_udp_port": 9125

}
